Nick - Fun Facts bottom border issue on mobile

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_showcase.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_showcase.scss
@@ -363,7 +363,7 @@
     }
 }
 
-.showcase-news, .showcase-body {  
+.showcase-news, .showcase-body {
 
     &.key-facts {
         .fact {
@@ -392,8 +392,10 @@
             padding-top: 10px;
             padding-bottom: 20px;
 
-            &.bottomrow {
-                border-bottom: solid 0px #d0d0d0;
+            @media #{$desktop, $tablet} {
+                &.bottomrow {
+                    border-bottom: solid 0px #d0d0d0;
+                }
             }
 
             i {
